# counting-datasets

./: .gitignore  README.md  datasets.md  design.md  pyproject.toml  usage_example.py
counting/src/counting_dataset/: __init__.py
counting/src/counting_dataset/adapters/: aerial_elephant.py  base.py  custom_adapter_template.py  dota.py  fsc147.py  kenyan_wildlife.py  malaria.py  penguin.py
counting/src/counting_dataset/api/: __init__.py  counting_class_dataset.py  counting_dataset_index.py  counting_image_dataset.py
counting/src/counting_dataset/core/: ids.py  schema.py  splits.py
counting/src/counting_dataset/index/: builder.py  policy.py  schema_sql.py
counting/tests/: test_adapter_aerial_elephant_smoke.py  test_adapter_fsc147_smoke.py  test_adapter_kenyan_wildlife_smoke.py  test_adapter_malaria_smoke.py  test_ids.py  test_image_review_stats_smoke.py  test_image_total_counts_and_image_dataset_smoke.py  test_index_and_api_smoke.py  test_split_normalization_and_missing_splits.py
